spade-macros/tests/into_diagnostic/ui/not_named_fields.stderr
error: Can only derive IntoDiagnostic on structs with named fields
 --> tests/into_diagnostic/ui/not_named_fields.rs:3:10
  |
3 | #[derive(spade_macros::IntoDiagnostic)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `spade_macros::IntoDiagnostic` (in Nightly builds, run with -Z macro-backtrace for more info)
